[package]
name = "hdfs"
version = "0.1.0"
license = "MPL-2.0"
authors = ["Alex Parrill <aparrill@datto.com>"]
edition = "2018"
categories = ["api-bindings", "filesystem", "network-programming"]
keywords = ["hadoop", "hdfs", "libhdfs"]

[dependencies]
libhdfs-sys = { path = "libhdfs-sys", version = "0.1.0" }

[dev-dependencies]
structopt = "0.3.2"
